<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diceware</string>
    <string name="output_label">Output:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mode_prompt">Choose a mode</string>
    <string-array name="modes_array">
        <item>Words</item>
        <item>ASCII</item>
        <item>Alphanumeric</item>
        <item>Numbers</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="randomOrg">Random.org</string>
    <string name="randomOrg_problem">There was a problem contacting random.org</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="clear">Clear</string>
    <string name="roll_again">Roll again</string>
    <string name="please_roll_again">Please roll again</string>
    <string name="times_to_roll">Roll %1$s times</string>
    <string name="faq_url">http://world.std.com/~reinhold/dicewarefaq.html</string>
    <string name="about">Diceware is a secure password generation method developed by
        			Arnold G. Reinhold.  This helper application was written and is 
        			maintained by Doug Prostko.</string>
    <string name="about_label">About</string>
    <string name="faq_label">FAQ</string>
    <string name="space"> </string>
    <string name="help_label">Help</string>
    <string name="help">Depending on whether you choose to output Words, Alphanumerics, ASCII characters, or Numbers,
        you will be prompted to roll between two and five times.  Roll that many dice and enter the values 
        by pressing the numbered buttons near the top of the interface.  If you do not have dice, just press the Random.org 
        button to securely retrieve random numbers.</string>
    <string name="rolls">Rolls:\u0020</string>
    <string name="slash">/</string>
    
        			
</resources>
