<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:padding="10dp">
    
    <TextView
        android:id="@+id/output_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/output_label"/>
  
    <TextView
    	android:id="@+id/output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/space"
        android:scrollHorizontally="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:layout_below="@id/output_label" />
        
    <TableLayout 
    	android:id="@+id/row1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_below="@id/output">
        <!-- android:layout_weight="1"> -->
       	<TableRow
        	android:layout_weight="1">
    		<Button
        		android:id="@+id/one"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/one" />
    		<Button
    			android:id="@+id/two"
    			android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/two" />
    		<Button
    			android:id="@+id/three"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/three" />
    		<Button
    			android:id="@+id/four"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/four" />
    		<Button
    			android:id="@+id/five"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/five" />
    		<Button
    			android:id="@+id/six"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/six" />
        </TableRow>
    </TableLayout>
    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_marginTop="50dip"
        android:prompt="@string/mode_prompt"
    />
    <Button
    	android:id="@+id/randomOrg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_marginTop="20sp"
        android:text="@string/randomOrg" 
        android:layout_centerHorizontal="true" 
        android:layout_centerVertical="true" />
    <TableLayout 
    	android:id="@+id/row2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_below="@id/randomOrg"
        android:layout_marginTop="20sp">
        <!-- android:layout_weight="1"> -->
       	<TableRow
        	android:layout_weight="1">     
    		<Button
    			android:id="@+id/copy_to_clipboard"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/copy_to_clipboard" />
    		<Button
    			android:id="@+id/clear"
        		android:layout_width="0dip"
        		android:layout_height="fill_parent"
        		android:layout_weight="1"
        		android:text="@string/clear" />
        	</TableRow>
		</TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/row1"
        android:layout_below="@+id/row1"
        android:layout_marginTop="14dp"
        android:text="@string/rolls" />

    <TextView
        android:id="@+id/rollsSoFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rollsSoFar"
        android:layout_alignBottom="@+id/rollsSoFar"
        android:layout_toRightOf="@+id/rollsSoFar"
        android:text="@string/slash" />

    <TextView
        android:id="@+id/totalRolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/slash"
        android:layout_alignBottom="@+id/slash"
        android:layout_toRightOf="@+id/slash"
        android:text="@string/space" />
              
</RelativeLayout>